<resources>
    <string name="app_name">AdminMadrashaApp</string>
    <string name="upload_notice">Upload Notice</string>
    <string name="todo1">TODO</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_ebook">Upload Ebook</string>
    <string name="delete_event">Delete Notice</string>
    <string name="update_faculty">Update Faculty</string>
    <string name="admin_control">Admin Control</string>
    <string name="select_image">Select Image</string>
    <string name="notice_title">Notice Title</string>
    <string name="upload_notice1">Upload Notice</string>
    <string name="todo">TODO</string>
    <string name="upload_image1">Upload Image</string>
    <string name="select_pdf">Select Pdf</string>
    <string name="pdf_title">Pdf Title</string>
    <string name="upload_pdf">Upload Pdf</string>
    <string name="no_file_selected">No file selected</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="email_address2">Email Address</string>
    <string name="post">Post</string>
    <string name="no_data_found">No Data Found</string>
    <string name="mahmud_islam">Mahmud Islam</string>
    <string name="principal">Principal</string>
    <string name="mahmud_gmail_com">mahmud@gmail.com</string>
    <string name="update_info">Update Info</string>
    <string name="computer_science">Computer Science</string>
    <string name="admin_control1">Admin Control</string>
    <string name="delete">Delete</string>
    <string name="Gkkmadmin">G.J.K.M Admin</string>
    <string name="elias_hossen">Elias Hossen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sinin">Sign In</string>
    <string name="email_address1">Email Address</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="create_an_account">Create An Account</string>
    <string name="create_an_account1">Create an account</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="click_to_sign_in">Click to Sign In</string>
    <string name="delete_image">Delete Image</string>
    <string name="anytottho_madrasha">Hello I am a developer. Please help me all time to perform this.</string>
    <string name="auto_slider_image">Auto Slider Image</string>

</resources>