<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/teacherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mahmud_islam"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_8font_mdp" />

        <TextView
            android:id="@+id/teacherPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/principal"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_8font_mdp" />

        <TextView
            android:id="@+id/teacherEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mahmud_gmail_com"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_8font_mdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/teacherUpdateId"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:backgroundTint="@color/greenBtn"
            android:text="@string/update_info"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_8font_mdp">


        </com.google.android.material.button.MaterialButton>



    </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/teacherImageId"
            android:layout_width="@dimen/_50mdp"
            android:layout_height="@dimen/_50mdp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:src="@drawable/m5" />

    </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>