<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="17dp"
    tools:context=".activities.Upload_Notice">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/noticeUpload"
            android:layout_width="@dimen/_100mdp"
            android:layout_height="@dimen/_115mdp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/add_auto_al"
                    android:contentDescription="@string/todo1"
                    android:padding="15dp"
                    android:src="@drawable/ic_add_photo_alternative" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/light_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/select_image"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

<com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/noticeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notice_title">


    </com.google.android.material.textfield.TextInputEditText>


</com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_notice1"
            android:layout_marginTop="15dp"
            android:id="@+id/UploadNoticeButton"
            android:backgroundTint="#2196F3"
            android:textAllCaps="false">


        </com.google.android.material.button.MaterialButton>
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_marginTop="13dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/noticeImageView"
        android:contentDescription="@string/todo1" />
</com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>