<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="440dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/newsFeedImage"
                android:layout_width="@dimen/_25mdp"
                android:layout_height="@dimen/_25mdp"
                android:src="@drawable/newpic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/elias_hossen"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12font_mdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteNotice"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-100dp"
                android:text="@string/delete"
                android:backgroundTint="@color/red3"
                android:textColor="@color/white"
                android:textAllCaps="false" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/noticeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25 Jun, 22"/>
            <TextView
                android:id="@+id/noticeTime"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="02:30 pm"/>
        </LinearLayout>

        <TextView
            android:id="@+id/deleteNoticeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/anytottho_madrasha"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12font_mdp" />

        <ImageView
            android:id="@+id/deleteNoticeImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_210mdp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>